<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#FBFBF9"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="84dp"
        android:layout_marginTop="2dp">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="77dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"

            android:text="@string/restart"
            android:textAllCaps="false"
            android:textColor="#455A64"
            app:backgroundTint="#E6D564"
            tools:ignore="RelativeOverlap" />

        <Button
            android:layout_width="90dp"
            android:layout_height="77dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"

            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:layout_toEndOf="@string/restart"
            android:layout_toRightOf="@string/restart"

            android:text="@string/New"
            android:textAllCaps="false"
            android:textColor="#455A64"
            app:backgroundTint="#E6D564" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="357dp"
        android:layout_height="532dp"
        android:layout_marginStart="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:orientation="vertical"
       >


        <Button
            android:id="@+id/Auto"
            android:layout_width="358dp"
            android:layout_height="135dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:text="@string/Auto"
            android:textAllCaps="false"

            />

        <Button
            android:id="@+id/Passitive_btn"
            android:layout_width="358dp"
            android:layout_height="135dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"

            android:onClick="Passitive_btnClicked"
            android:text="@string/Passitive"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/Train"
            android:layout_width="358dp"
            android:layout_height="135dp"
            android:layout_weight="1"
            android:text="@string/Train"
            android:textAllCaps="false"

            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:gravity="center"
            android:text="@string/Textbox" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            style="?android:attr/buttonBarStyle">

            <Button
                android:id="@+id/button4"
                android:layout_width="wrap_content"
                android:layout_height="77dp"
                android:layout_marginStart="10dp"

                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:text="@string/button1"
                tools:ignore="DuplicateSpeakableTextCheck"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/button5"
                android:layout_width="wrap_content"
                android:layout_height="77dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:text="@string/button2"
                style="?android:attr/buttonBarButtonStyle"/>

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="77dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:text="@string/button3"
                style="?android:attr/buttonBarButtonStyle"/>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>
